# FCBillar

./: .gitignore  README.md  _pw_copa.py  clubs_list.txt  noms_list.txt  pyproject.toml
.github/workflows/: publish-live-opens.yml
api/: app.py
desktop/models/: data_source.py
scripts/: cleanup_games.py  cleanup_ranking_mitjanes.py  enrich_individual_categories.py  fill_ranking_gaps.py  import_2012_2014_individuals.py  import_historical_opens.py  import_lliga_standings.py  ingest_open_games.py  publish_records.py  reingest_multimod.py  repas_partides.py  scrape_old_lliga.py  scrape_old_lliga_parallel.py  update_all.ps1  verify_opens_ui.py
src/fcb_opens/: cli.py  projection.py
src/fcbillar/: analytics.py  auth.py  categories.py  cli.py  cloud_sync.py  linking.py  opens_femeni.py  pipeline.py  torneig_naming.py
supabase/migrations/: 0002_fcbillar_games.sql  0003_fcbillar_lliga.sql  0004_fcbillar_copa.sql  0006_fcbillar_opens_tipus.sql  0006_fcbillar_player_rating_buckets.sql  0007_fcbillar_player_rating_buckets.sql  0008_fcbillar_lliga_standings_hist.sql  0008_fcbillar_player_rating_index.sql
tests/: test_analytics_rating.py  test_categories.py  test_copa.py  test_ingest_open_games.py  test_linking.py  test_opens_femeni.py  test_parsers.py  test_pipeline.py  test_publish_records.py  test_ranking_mitjana_update.py  test_repository.py  test_select_last_15_games.py  test_torneig_naming.py
tests/fixtures/: copa_faseGrups_7.html  (+1 more)
tools/: check_links.py  check_ranking_ids.py  compare_player.py  debug_links.py  delete_links.py  schema.py
web/: deploy.ps1
(+33 files in other folders)
