[project]
name = "fcbillar"
version = "0.1.0"
description = "Scraper de rànquings i partides de la Federació Catalana de Billar (caràmbola)"
readme = "README.md"
authors = [
    { name = "algoa", email = "algoam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "rich>=13.9",
    "structlog>=24.4",
    "python-dateutil>=2.9",
    "pyqt6>=6.11.0",
    "pyqt6-charts>=6.11.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "httpx>=0.27",
    "pdfplumber>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "ipykernel>=6.29",
    "pandas>=2.2",
]

[project.scripts]
fcbillar = "fcbillar.cli:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
